--- a/AdminMenus/AdminMenus.csproj
+++ b/AdminMenus/AdminMenus.csproj
@@ -31,14 +31,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CitizenFX.Core">
-      <HintPath>C:\Users\Arnaud\AppData\Local\FiveM\FiveM.app\citizen\clr2\lib\mono\4.5\CitizenFX.Core.dll</HintPath>
+    <Reference Include="CitizenFX.Core.Client">
+      <HintPath>..\libs\CitizenFX.Core.Client.dll</HintPath>
     </Reference>
-    <Reference Include="MeneliaAPI_Client.net">
-      <HintPath>..\..\MeneliaAPI Client\MeneliaAPI Client\bin\Debug\MeneliaAPI_Client.net.dll</HintPath>
-    </Reference>
-    <Reference Include="NativeUI">
-      <HintPath>..\..\libraries\NativeUI.dll</HintPath>
+    <Reference Include="NativeUI, Version=1.7.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\libs\NativeUI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
