--- a/MeneliaAPI Entities/MeneliaAPI Entities.csproj
+++ b/MeneliaAPI Entities/MeneliaAPI Entities.csproj
@@ -41,8 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Main.cs" />
+    <Compile Include="EntityInfos\NPCInfo.cs" />
+    <Compile Include="EntityInfos\PlayerInfo\Banking.cs" />
+    <Compile Include="EntityInfo.cs" />
+    <Compile Include="EntityInfos\PlayerInfo\Transaction.cs" />
+    <Compile Include="EntityInfos\PlayerInfo\Position.cs" />
+    <Compile Include="EntityInfos\PlayerInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
