--- a/BankNUI/BankNUI.csproj
+++ b/BankNUI/BankNUI.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7359FF2F-AF21-4C82-B0E1-CAE6F0247BC3}</ProjectGuid>
+    <ProjectGuid>{E69622DF-CA1F-4BE7-8CB0-7A36BA439C96}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SManager_Client</RootNamespace>
-    <AssemblyName>SManager_Client.net</AssemblyName>
+    <RootNamespace>BankNUI</RootNamespace>
+    <AssemblyName>BankNUI.net</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -34,6 +34,9 @@
     <Reference Include="CitizenFX.Core.Client">
       <HintPath>..\libs\CitizenFX.Core.Client.dll</HintPath>
     </Reference>
+    <Reference Include="MeneliaAPI_Client.net">
+      <HintPath>..\MeneliaAPI Client\bin\Debug\MeneliaAPI_Client.net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,8 +47,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SManager.cs" />
+    <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="html\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
