--- a/Menelia.Client/Menelia.Client.csproj
+++ b/Menelia.Client/Menelia.Client.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9150CC1F-05FE-4544-860A-4EB050B30D46}</ProjectGuid>
+    <ProjectGuid>{132B0EE0-BF81-4165-B3F0-E887C240231D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MeneliaAPI_Client</RootNamespace>
-    <AssemblyName>MeneliaAPI_Client.net</AssemblyName>
+    <RootNamespace>Menelia.Client</RootNamespace>
+    <AssemblyName>Menelia.Client.net</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -32,13 +32,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CitizenFX.Core.Client">
-      <HintPath>..\..\libraries\client\CitizenFX.Core.Client.dll</HintPath>
+      <HintPath>..\libs\CitizenFX.Core.Client.dll</HintPath>
     </Reference>
-    <Reference Include="MeneliaAPI_Entities.net">
-      <HintPath>..\..\MeneliaAPI Entities\MeneliaAPI Entities\bin\Debug\MeneliaAPI_Entities.net.dll</HintPath>
+    <Reference Include="NativeUI">
+      <HintPath>..\libs\NativeUI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,8 +48,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Client.cs" />
+    <Compile Include="AdminMenu\CharacterMenu.cs" />
+    <Compile Include="AdminMenu\MainMenu.cs" />
+    <Compile Include="AdminMenu\Server.cs" />
+    <Compile Include="AdminMenu\ServerMenu.cs" />
+    <Compile Include="AdminMenu\Vehicles.cs" />
+    <Compile Include="AdminMenu\VehiclesMenu.cs" />
+    <Compile Include="AdminMenu\Weapons.cs" />
+    <Compile Include="CallbackClasses.cs" />
+    <Compile Include="ClientUtils.cs" />
+    <Compile Include="BankNUI\Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SManager\SManager.cs" />
+    <Compile Include="Welcome\Welcome.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="BankNUI\html\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
