--- a/Menelia.Server/Menelia.Server.csproj
+++ b/Menelia.Server/Menelia.Server.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F9F1ED4B-BD7B-4FE4-AC87-C6F376316E2F}</ProjectGuid>
+    <ProjectGuid>{79CE604E-A371-454A-8DFE-9A8E0C726428}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MeneliaAPI_Server</RootNamespace>
-    <AssemblyName>MeneliaAPI_Server.net</AssemblyName>
+    <RootNamespace>Menelia.Server</RootNamespace>
+    <AssemblyName>Menelia.Server.net</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -32,10 +32,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CitizenFX.Core.Server">
-      <HintPath>..\..\libraries\server\CitizenFX.Core.Server.dll</HintPath>
+      <HintPath>..\libs\CitizenFX.Core.Server.dll</HintPath>
     </Reference>
     <Reference Include="MeneliaAPI_Entities.net">
-      <HintPath>..\..\MeneliaAPI Entities\MeneliaAPI Entities\bin\Debug\MeneliaAPI_Entities.net.dll</HintPath>
+      <HintPath>..\MeneliaAPI Entities\bin\Debug\MeneliaAPI_Entities.net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -47,8 +47,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Server.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Server.cs" />
+    <Compile Include="ServerUtils.cs" />
+    <Compile Include="SManager\SManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
